task320/src/main/java/com/example/task320/error/ForbiddenException.java
package com.example.task320.error;

public class ForbiddenException extends RuntimeException {
    public ForbiddenException(String msg) { super(msg); }
}
